Create Some Projects and Solved some leetcode problems

--- a/Portfolio-site/index.html
+++ b/Portfolio-site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Ghanshyam Mishra |Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,13 +20,17 @@
 
         <!--profile-->
         <div class="profile">
-            <img src="images/image.jpg" alt="img" width="150px">
+            <img src="images/image.jpeg" alt="img" width="150px">
             <h1>Ghanshyam Mishra</h1>
             <div class="social-icons">
                 <a href="https://www.facebook.com/ghanshyam.mishra4/"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/ghanshyam-mishra-b7b448128/"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.twitter.com/ghanshyamvns7"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com/ghanshyam2"><i class="fa fa-github"></i></a>
+
+
+
+<!--                <a href="pdf/Ghanshyam.pdf" download class="btn"><b>Download CV</b></a>-->
 
             </div>
         </div>
@@ -35,18 +39,19 @@
 
         <nav>
             <ul>
-                <li><a href="#home" class="active  "><i class="fa fa-fw fa-home"></i>Home</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-fw fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-fw fa-user"></i>About Me</a></li>
                 <li><a href="#skill"><i class="fa fa-fw fa-pencil"></i>Skills</a></li>
                 <li><a href="#resume"><i class="fa fa-fw fa-briefcase"></i>Resume</a></li>
                 <li><a href="#contact"><i class="fa fa-fw fa-envelope"></i>Contact</a></li>
+
             </ul>
         </nav>
 
          <!--footer-->
 <!--        <div class="footer">-->
 <!--            <p>&copy; Copyright 2023 Made By Ghanshyam Mishra</p>-->
-<!--&lt;!&ndash;            <p>&copy; Copyright 2023 <br>Designed by <a href="https://ghanshyammishra.xyz" target="_blank">Ghanshyammishra.xyz</a></p>&ndash;&gt;-->
+<!--           &lt;!&ndash;<p>&copy; Copyright 2023 <br>Designed by <a href="https://ghanshyammishra.xyz" target="_blank">Ghanshyammishra.xyz</a></p>&ndash;&gt;-->
 <!--        </div>-->
 
 
@@ -67,6 +72,7 @@
             <div class="home-row">
                 <h1>Hi, This is<br> Ghanshyam Mishra<span>.</span></h1>
                 <p>I'm a <span class="auto-input"></span></p>
+
             </div>
         </section>
 
@@ -77,13 +83,15 @@
                 <h1 class="sub-heading">About Me</h1>
                 <div class="divider"></div>
                 <p>I'm Ghanshyam Mishra. I'm a Back-End Developer and a Programmer!</p>
+                <p>I participated in a variety of extracurricular activities during my graduation, including cricket and TechnoFest, where I also served as team captain. I had a lot of enthusiasm for emerging technologies. After graduating, I moved on to prepare for the UPSC and State Services. However, when things in Covid deteriorated for me, I was forced to stop preparing and considered switching to my primary field because I did not want to let my skill go to waste.</p>
+
 
 
                 <div class="about-col">
 
                     <!-- image col -->
                     <div class="img-col">
-                        <img src="images/image.jpg" alt="..">
+                        <img src="images/image.jpeg" alt="..">
                     </div>
 
                     <!-- information -->
@@ -95,7 +103,7 @@
                             <div class="icon-list">
                                 <ul>
                                     <li><i class="fa-solid fa-angle-right"></i><strong>Birthday:</strong><span> 2 sept 1994</span></li>
-<!--                                    <li><i class="fa-solid fa-angle-right"></i><strong>Website:</strong><span> www.riddhigupta.xyz</span></li>-->
+
                                     <li><i class="fa-solid fa-angle-right"></i><strong>Mobile No:</strong> 7017670019<span></span></li>
                                     <li><i class="fa-solid fa-angle-right"></i><strong>City:</strong><span> Varanasi</span></li>
                                 </ul>
@@ -105,7 +113,7 @@
                             <div class="icon-list">
                                 <ul>
                                     <li><i class="fa-solid fa-angle-right"></i><strong>Age:</strong><span> 28</span></li>
-                                    <li><i class="fa-solid fa-angle-right"></i><strong>Degree:</strong><span> B.tech</span></li>
+                                    <li><i class="fa-solid fa-angle-right"></i><strong>Degree:</strong><span> B.tech(Computer Science and Information Technology)</span></li>
                                     <li><i class="fa-solid fa-angle-right"></i><strong>Email_id:</strong> ghanshyamvns7@gmail.com<span></span></li>
                                     <li><i class="fa-solid fa-angle-right"></i><strong>State:</strong><span> Uttar Pradesh</span></li>
 
@@ -124,8 +132,7 @@
 
             <h1 class="sub-heading">Skills</h1>
             <div class="divider"></div>
-            <p class="sub-para">As a Back-end Developer, I excel in HTML, CSS, Python, Django, Data Structure and Algorithms. I am committed to delivering high-quality work and continuously expanding my knowledge to build innovative project.<br>Apart from that, I've a great problem solving skills and solved more than 200+ problems on various coding platforms. </p>
-
+            <p class="sub-para">I have strong skills in data structures, algorithms, Python, Django, and the Django Rest Framework as a back-end developer. I'm dedicated to producing top-notch work and advancing my expertise constantly to develop creative initiatives.<br>Aside from that, I have excellent problem-solving abilities and have solved over 200 issues on various coding platforms.</p>
             <div class="skill-row">
 
                 <!-- Skill-1 -->
@@ -154,10 +161,10 @@
                 <div class="skill-box">
                     <div class="skill-info">
                         <h2>Django</h2>
-                        <h2>60%</h2>
+                        <h2>70%</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line" style="width: 60%"></div>
+                        <div class="skill-inner-line" style="width: 70%"></div>
                     </div>
                 </div>
 
@@ -168,7 +175,7 @@
                         <h2>75%</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line" style="width: 87%"></div>
+                        <div class="skill-inner-line" style="width: 75%"></div>
                     </div>
                 </div>
 
@@ -214,7 +221,11 @@
                         <h3>Secondary (10th)</h3>
                         <span class="sp-box">2009-2010</span>
                         <p>C M Anglo Bengali Inter College</p>
+
                     </div>
+                    <a href="Ghanshyam.pdf" download class="btn"><b>Download CV</b></a>
+
+
                 </div>
 
 
@@ -273,6 +284,7 @@
                     <div class="pro2-description">
                         <p>Clinical Data Repost is a web page in which data of every patient will be stored and only admin can see the data and update and delete it.
                             <br><br>The technical languages used in this project were: HTML, CSS, Python, Django</p>
+                        <p><b>Only current projects are displayed here; for more, please see my GitHub page. The link is under the bio section.</b></p>
                     </div>
                 </div>
 
@@ -368,10 +380,7 @@
     <script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
 
  <!--footer-->
-        <div class="footer">
-            <p>&copy; Copyright 2023 Made By Ghanshyam Mishra</p>
-           <p>&copy; Copyright 2023 <br>Designed by <a href="https://ghanshyammishra.xyz" target="_blank">Ghanshyammishra.xyz</a></p>-->
-        </div>
 
+  <footer class="footer"> all rights reserved! made with &heartsuit; from <span> Ghanshyam Mishra </span> &copy Copy right 2023. </footer>
 </body>
 </html>
