--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portfolio Website-Ghanshyam</title>
+  <title>Ghanshyam Mishra | Portfolio</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image" href="fav-icon2.jpg">
   <!-- linking css file -->
   <link rel="stylesheet" href="style.css">
   <!-- bootstrap CDN -->
@@ -65,14 +67,13 @@
                 </div>
 
                 <div class="col-lg-8">
-                    <p>Hi! I'm Ghanshyam Mishra, a B.TECH in Computer Science and Information Technology graduate with skills in <b>Python, Django, HTML, and CSS</b>. I also enjoy technology and am an excellent learner.</p>
+                    <p>Hi! I'm Ghanshyam Mishra, a B.TECH in Computer Science and Information Technology graduate with skills in <b>Python, Django, HTML, and CSS, SQL, Data Structure</b>. I also enjoy technology and am an excellent learner.</p>
                     <div class="row mt-3">
                         <div class="col-md-6">
                             <ul>
-                                <li>Name: Ghanshyam Mishra</li>
-                                <li>Age: 28</li>
-                                <li>email: ghanshyamvns7@gmail.com</li>
-                                <li>Occupation: Web Developer and freelancer</li>
+                                <li><b>Name</b>: Ghanshyam Mishra</li>
+                                <li><b>Email</b>: ghanshyamvns7@gmail.com</li>
+                                <li><b>Occupation</b>: Web Developer and freelancer</li>
 
 
                             </ul>
@@ -89,13 +90,15 @@
                     <div class="row mt-3">
                         <p> I participated in a variety of extracurricular activities during my graduation, including <b>cricket and TechnoFest</b>, where I also served as team captain.
 
-                            I had a lot of enthusiasm for emerging technologies. After graduating, I moved on to prepare for the <b>UPSC and State Services</b>. However, when things in Covid deteriorated for me, I was forced to stop preparing and considered switching to my primary field because I wasn't able to pursue further.</p>
+                            I had a lot of enthusiasm for emerging technologies. After graduating, I moved on to prepare for the <b>UPSC and State Services</b>. However, when things in Covid deteriorated for me, I was forced to stop preparing and considered switching to my primary field because I did not want to let my skill go to waste.</p>
                     </div>
-                    <a href="pdf/Ghanshyam.pdf" download class="btn"><b>Download CV</b></a>
-                    <a href="https://linktree.com/ghanshyamvns7/" class="btn"><b>LinkTree</b></a>
+                      <a href="pdf/Ghanshyam.pdf" download class="btn"><b>Download CV</b></a>
+                      <a href="https://linktree.com/ghanshyamvns7/" class="btn"><b>LinkTree</b></a>
+                    <a href="https://ghanshyam-mishra.netlify.app/" class="btn"><b>Portfolio</b></a>
                 </div>
             </div>
         </div>
+
     </section>
 
     <!-- services section-->
@@ -107,7 +110,7 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class="fas servicesIcon fa-clock"></i>
-                            <h4 class="card-title mt-3">Backend Development</h4>
+                            <h4 class="card-title mt-3">Website Development</h4>
                             <p class="card-text mt-3">As I have skills of Python,Django and Postgresql and DRF. So i can easily develop a website. I have knowledge of HTML, CSS as well.
                             </p>
                         </div>
@@ -318,6 +321,7 @@
                 <a href="https://github.com/ghanshyam2" target="_blank"><i class="fab fa-github"></i></a>
 
             </div>
+            <p> &copy 2023 made with Love by Ghanshyam Mishra | all rights reserved!</p>
         </div>
 
     </footer>
