Solved some geeksforgeeks problems

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -321,7 +321,7 @@
                 <a href="https://github.com/ghanshyam2" target="_blank"><i class="fab fa-github"></i></a>
 
             </div>
-            <p> &copy 2023 made with Love by Ghanshyam Mishra | all rights reserved!</p>
+            <p> &copy 2023 made with &heartsuit; by Ghanshyam Mishra | all rights reserved!</p>
         </div>
 
     </footer>
