Solved coding problems

--- a/Portfolio-site/index.html
+++ b/Portfolio-site/index.html
@@ -44,6 +44,7 @@
                 <li><a href="#skill"><i class="fa fa-fw fa-pencil"></i>Skills</a></li>
                 <li><a href="#resume"><i class="fa fa-fw fa-briefcase"></i>Resume</a></li>
                 <li><a href="#contact"><i class="fa fa-fw fa-envelope"></i>Contact</a></li>
+                <li><a href="#Blogs"><i class="fab fa-blogger-b"></i>Blogs</a></li>
 
             </ul>
         </nav>
