--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#blogs">Blogs</a>
+                    </li>
                 </ul>
 
             </div>
